--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
-body {
-  font-family: "Times New Roman", sans-serif;
-}
+body {font-family: "Times New Roman", sans-serif;}
 
-h2 {
-  color:color: orange;}
+h2 {color:color: orange;}
+h1 {color: blue;}
+.header {
+    background-color: #F1F1F1;
+    text-align: center;
+    padding: 20px;
+}
 
 #contact {
   background-color: orange;
